readme done and code formatting done

--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -2,70 +2,64 @@
 <section>
   <center>
     <h3 class="mt-5">Details</h3>
-  <table class="table table-rounded rounded-4 overflow-hidden mb-0 pb-0" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;"" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
-    <thead>
-      <tr>
-        <th>Customer Name</th>
-        <th>Address</th>
-        <th>Phone</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= customer[0].name %></td>
-        <td><%= customer[0].address %></td>
-        <td><%= customer[0].phone %></td>
-        <td><a class="btn btn-custom" href="/customers/<%= customer[0].id %>/edit">Edit</a></td>
-      </tr>
-    </tbody>
-  </table>
-        <table class="table my-5 table-rounded rounded-4 overflow-hidden w-50">
-            <thead>
-              <tr>
-                <th>Cat Name</th>
-                <th>Date of Birth</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% if (customer[0].cats) { %>
-                <% customer[0].cats.forEach(function(cat) { %>
-                  <tr>
-                    <td><%= cat.name %></td>
-                    <td><%= cat.dob %></td>
-                    <td>
-                      <form action="/cats/<%= customer[0].id %>/<%= cat.id %>?_method=DELETE" method="POST">
-                        <button type="submit" class="btn btn-danger">X</button>
-                      </form>
-                    </td>
-                  </tr>
-                <% }); %>
-              <% } else { %>
-                <tr>
-                  <td colspan="3">No cats yet.</td>
-                </tr>
-              <% } %>
-            </tbody>
-          </table>
-        </center>
-
-        
-          <center>
-          <h3>Add a Cat to Customer</h3>
-          <form class="form-inline" action="/cats/<%= customer[0].id %>" method="POST">
-            <div class="form-group w-25">
-              <input type="text" class="form-control mb-2 mr-sm-2" name="name" placeholder="Name">
-            </div>
-            <div class="form-group w-25">
-              <input type="date" class="form-control mb-2 mr-sm-2" name="dob" placeholder="Date of Birth">
-            </div>
-            <button type="submit" class="btn btn-custom mb-2">Add Cat</button>
-          </form>
-        </center>
-
-        
-            
+    <table class="table table-rounded rounded-4 overflow-hidden mb-0 pb-0" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;"" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
+      <thead>
+        <tr>
+          <th>Customer Name</th>
+          <th>Address</th>
+          <th>Phone</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= customer[0].name %></td>
+          <td><%= customer[0].address %></td>
+          <td><%= customer[0].phone %></td>
+          <td><a class="btn btn-custom" href="/customers/<%= customer[0].id %>/edit">Edit</a></td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table my-5 table-rounded rounded-4 overflow-hidden w-50">
+      <thead>
+          <tr>
+            <th>Cat Name</th>
+            <th>Date of Birth</th>
+            <th></th>
+          </tr>
+      </thead>
+      <tbody>
+        <% if (customer[0].cats) { %>
+        <% customer[0].cats.forEach(function(cat) { %>
+        <tr>
+          <td><%= cat.name %></td>
+          <td><%= cat.dob %></td>
+          <td>
+            <form action="/cats/<%= customer[0].id %>/<%= cat.id %>?_method=DELETE" method="POST">
+              <button type="submit" class="btn btn-danger">X</button>
+            </form>
+          </td>
+        </tr>
+        <% }); %>
+        <% } else { %>
+        <tr>
+          <td colspan="3">No cats yet.</td>
+        </tr>
+        <% } %>
+      </tbody>
+    </table>
+  </center>   
+  <center>
+    <h3>Add a Cat</h3>
+      <form class="form-inline" action="/cats/<%= customer[0].id %>" method="POST">
+      <div class="form-group w-25">
+        <input type="text" class="form-control mb-2 mr-sm-2" name="name" placeholder="Name">
+      </div>
+      <div class="form-group w-25">
+        <input type="date" class="form-control mb-2 mr-sm-2" name="dob" placeholder="Date of Birth">
+      </div>
+      <button type="submit" class="btn btn-custom mb-2">Add</button>
+      </form>
+  </center>
 </section>
-
 <%- include('../partials/footer') %>
